--- a/coffee.html
+++ b/coffee.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffee</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+<img color="#222831">
+<div class="container">
+    <header>     
+        <ul>
+            <li><p>Home</p></li>
+            <li><p>About</p></li>
+            <li><p>Menu</p></li>
+            <li><p>Blog</p></li>
+            <li><p>Shop</p></li>
+            <li><p>Contact</p></li>
+        </ul>
+        <div class="icon">
+            <img src="your logo.png" alt="Your logo" width="218px" height="51px">
+        </div>
+    </header>
+
+</div>
 </body>
 </html>
