--- a/coffee.html
+++ b/coffee.html
@@ -7,22 +7,50 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<img color="#222831">
-<div class="container">
-    <header>     
-        <ul>
-            <li><p>Home</p></li>
-            <li><p>About</p></li>
-            <li><p>Menu</p></li>
-            <li><p>Blog</p></li>
-            <li><p>Shop</p></li>
-            <li><p>Contact</p></li>
-        </ul>
-        <div class="icon">
-            <img src="your logo.png" alt="Your logo" width="218px" height="51px">
-        </div>
-    </header>
-
-</div>
+    <img color="#222831">
+    <div class="container">
+        <header>  
+            <nav>   
+                <ul>
+                    <li class="underlined"><p >Home</p></li>
+                    <li><p>About</p></li>
+                    <li><p>Menu</p></li>
+                    <li><p>Blog</p></li>
+                    <li><p>Shop</p></li>
+                    <li><p>Contact</p></li>
+                </ul>
+            </nav>
+            <div class="icon">
+                <img src="your logo.png" alt="Your logo" width="218px" height="51px">
+            </div>
+        </header>
+        <main>
+            <section>
+            <div class="text">
+                <p class="onetext">Coffee Time</p>
+                <img src="Coffee.png" alt="">
+                <p class="twotext">YOUR HEADLINE</p>
+                <p class="threetext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <button>Order Now</button>
+            </div>
+            <img  class="wave" src="Shape.png" alt=""> 
+            </section>
+            <div class="second_section">
+                <div>
+                    <p class="onetext">Black <br>Coffees</p>  
+                    <button>Order Now</button> 
+                </div>
+                <div>
+                    <img src="cup.png" alt="" width="535px" height="515px">
+                    <div class="paragraphs">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipis</p>
+                        <p class="one_tab">cing elit, sed do eiusmod tempor incididunt ut </p>
+                        <p class="two_tab">labore et dolore magna aliqua. Ut enim ad </p> 
+                        <p class="three_tab">minim veniam, quis nostrud exercitation </p>
+                     </div>
+                </div>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
