--- a/coffee.html
+++ b/coffee.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img color="#222831">
     <div class="container">
         <header>  
             <nav>   
@@ -24,22 +23,24 @@
                 <img src="your logo.png" alt="Your logo" width="218px" height="51px">
             </div>
         </header>
+        <img class="special_picture" src="Coffee.png" alt="">
         <main>
-            <section>
-            <div class="text">
-                <p class="onetext">Coffee Time</p>
-                <img src="Coffee.png" alt="">
-                <p class="twotext">YOUR HEADLINE</p>
-                <p class="threetext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <button>Order Now</button>
-            </div>
-            <img  class="wave" src="Shape.png" alt=""> 
+            <section class="first_section">
+                <div class="text">
+                    <p class="first_text">Coffee Time</p>
+                    <p class="second_text">YOUR HEADLINE</p>
+                    <p class="third_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <button>Order Now</button>
+                </div>
+                <img  class="wave" src="wave.png" alt=""> 
+                <img class="zerno" src="zerno.png" alt="">
             </section>
             <div class="second_section">
-                <div>
-                    <p class="onetext">Black <br>Coffees</p>  
+                <div class="first_piece">
+                    <p class="first_text">Black <br>Coffees</p>  
                     <button>Order Now</button> 
                 </div>
+                <div class="blank_space"></div>
                 <div>
                     <img src="cup.png" alt="" width="535px" height="515px">
                     <div class="paragraphs">
