--- a/coffee.html
+++ b/coffee.html
@@ -20,10 +20,10 @@
                 </ul>
             </nav>
             <div class="icon">
-                <img src="your logo.png" alt="Your logo" width="218px" height="51px">
+                <img src="/imgfolder/your logo.png" alt="Your logo" width="218px" height="51px">
             </div>
         </header>
-        <img class="special_picture" src="Coffee.png" alt="">
+        <img class="special_picture" src="/imgfolder/Coffee.png" alt="">
         <main>
             <section class="first_section">
                 <div class="text">
@@ -32,8 +32,8 @@
                     <p class="third_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     <button>Order Now</button>
                 </div>
-                <img  class="wave" src="wave.png" alt=""> 
-                <img class="zerno" src="zerno.png" alt="">
+                <img  class="wave" src="/imgfolder/wave.png" alt=""> 
+                <img class="zerno" src="/imgfolder/zerno.png" alt="">
             </section>
             <div class="second_section">
                 <div class="first_piece">
@@ -42,7 +42,7 @@
                 </div>
                 <div class="blank_space"></div>
                 <div>
-                    <img src="cup.png" alt="" width="535px" height="515px">
+                    <img src="/imgfolder/cup.png" alt="" width="535px" height="515px">
                     <div class="paragraphs">
                         <p>Lorem ipsum dolor sit amet, consectetur adipis</p>
                         <p class="one_tab">cing elit, sed do eiusmod tempor incididunt ut </p>
