--- a/coffee.html
+++ b/coffee.html
@@ -51,6 +51,48 @@
                      </div>
                 </div>
             </div>
+            <div class = "upperwave">
+                <img src = "/imgfolder/upperwave.png" alt = "">
+                <div class="twocups_section">
+                    <div>
+                        <img class = "circlecup1" src="/imgfolder/circlecup1.png" alt="">  
+                        <div class="paragraphs_hot">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipis</p>
+                            <p>cing elit, sed do eiusmod tempor incididunt ut </p>
+                            <p>labore et dolore magna aliqua. Ut enim ad </p> 
+                            <p>minim veniam, quis nostrud exercitation </p>
+                         </div>
+                    </div>     
+                    <div class="blank_space_hot"></div>
+                    <div class="first_piece">
+                        <div class = "hot_text">
+                            <p><br>Hot</p>
+                            <p>Coffees</p>
+                        </div>
+                        <button>Order Now</button> 
+                    </div>                    
+                </div>
+                <div class="white_section">
+                    <div class="first_piece">
+                        <div class = "white_text">
+                            <p><br>White</p>
+                            <p>Coffees</p>
+                        </div>  
+                        <button>Order Now</button> 
+                    </div>
+                    <div class="blank_space_white"></div>
+                    <div>
+                        <img class = "circlecup2" src="/imgfolder/circlecup2.png" alt="">
+                        <div class="paragraphs_white">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipis</p>
+                            <p>cing elit, sed do eiusmod tempor incididunt ut </p>
+                            <p>labore et dolore magna aliqua. Ut enim ad </p> 
+                            <p>minim veniam, quis nostrud exercitation </p>
+                            <p>ullamco laboris nisi ut aliquip ea commodo </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
     </div>
 </body>
