--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 </ul>
             </nav>
             <div class="icon">
-                <img src="/imgfolder/your logo.png" alt="Your logo" width="218px" height="51px">
+                <img src="imgfolder/your logo.png" alt="Your logo" width="218px" height="51px">
             </div>
         </header>
-        <img class="special_picture" src="/imgfolder/Coffee.png" alt="">
+        <img class="special_picture" src="imgfolder/Coffee.png" alt="">
         <main>
             <section class="first_section">
                 <div class="text">
@@ -32,8 +32,8 @@
                     <p class="third_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     <button>Order Now</button>
                 </div>
-                <img  class="wave" src="/imgfolder/wave.png" alt=""> 
-                <img class="zerno" src="/imgfolder/zerno.png" alt="">
+                <img  class="wave" src="imgfolder/wave.png" alt=""> 
+                <img class="zerno" src="imgfolder/zerno.png" alt="">
             </section>
             <div class="second_section">
                 <div class="first_piece">
@@ -42,7 +42,7 @@
                 </div>
                 <div class="blank_space"></div>
                 <div>
-                    <img src="/imgfolder/cup.png" alt="" width="535px" height="515px">
+                    <img src="imgfolder/cup.png" alt="" width="535px" height="515px">
                     <div class="paragraphs">
                         <p>Lorem ipsum dolor sit amet, consectetur adipis</p>
                         <p class="one_tab">cing elit, sed do eiusmod tempor incididunt ut </p>
@@ -52,10 +52,10 @@
                 </div>
             </div>
             <div class = "upperwave">
-                <img src = "/imgfolder/upperwave.png" alt = "">
+                <img src = "imgfolder/upperwave.png" alt = "">
                 <div class="twocups_section">
                     <div>
-                        <img class = "circlecup1" src="/imgfolder/circlecup1.png" alt="">  
+                        <img class = "circlecup1" src="imgfolder/circlecup1.png" alt="">  
                         <div class="paragraphs_hot">
                             <p>Lorem ipsum dolor sit amet, consectetur adipis</p>
                             <p>cing elit, sed do eiusmod tempor incididunt ut </p>
@@ -82,7 +82,7 @@
                     </div>
                     <div class="blank_space_white"></div>
                     <div>
-                        <img class = "circlecup2" src="/imgfolder/circlecup2.png" alt="">
+                        <img class = "circlecup2" src="imgfolder/circlecup2.png" alt="">
                         <div class="paragraphs_white">
                             <p>Lorem ipsum dolor sit amet, consectetur adipis</p>
                             <p>cing elit, sed do eiusmod tempor incididunt ut </p>
