--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <main>
             <section class="first_section">
                 <div class="text">
-                    <p class="first_text">Coffee Time</p>
-                    <p class="second_text">YOUR HEADLINE</p>
+                    <h1 class="first_text">Coffee Time</h1>
+                    <h3 class="second_text">YOUR HEADLINE</h3>
                     <p class="third_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     <button>Order Now</button>
                 </div>
@@ -39,18 +39,18 @@
             <div class="second_section">
                 <div class="first_piece">
                     <div class="first_text">
-                        <p>Black</p>
-                        <p>Coffees</p> 
+                        <h2>Black</h2>
+                        <h2>Coffees</h2> 
                     </div>    
                     <button>Order Now</button> 
                 </div>
                 <div>
                     <img src="imgfolder/cup.png" alt="" width="535px" height="515px">
                     <div class="paragraphs">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipis</p>
-                        <p class="one_tab">cing elit, sed do eiusmod tempor incididunt ut </p>
-                        <p class="two_tab">labore et dolore magna aliqua. Ut enim ad </p> 
-                        <p class="three_tab">minim veniam, quis nostrud exercitation </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipis
+                        cing elit, sed do eiusmod tempor incididunt ut 
+                        labore et dolore magna aliqua. Ut enim ad 
+                        minim veniam, quis nostrud exercitation </p>
                      </div>
                 </div>
             </div>
