--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
                 <div class="twocups_section">
                     <div>
                         <img class = "circlecup1" src="imgfolder/circlecup1.png" alt="">  
-                        <div class="paragraphs_hot">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipis</p>
-                            <p>cing elit, sed do eiusmod tempor incididunt ut </p>
-                            <p>labore et dolore magna aliqua. Ut enim ad </p> 
-                            <p>minim veniam, quis nostrud exercitation </p>
-                         </div>
-                    </div>     
+                        <p class="paragraphs_hot">
+                            Lorem ipsum dolor sit amet, consectetur adipis
+                            cing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad 
+                            minim veniam, quis nostrud exercitation 
+                        </p>
+                    </div>    
                     <div class="first_piece">
                         <div class = "hot_text">
                             <p>&shy</p>
