--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
                     </div>
                     <div>
                         <img class = "circlecup2" src="imgfolder/circlecup2.png" alt="">
-                        <div class="paragraphs_white">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipis</p>
-                            <p>cing elit, sed do eiusmod tempor incididunt ut </p>
-                            <p>labore et dolore magna aliqua. Ut enim ad </p> 
-                            <p>minim veniam, quis nostrud exercitation </p>
-                            <p>ullamco laboris nisi ut aliquip ea commodo </p>
-                        </div>
+                        <p class="paragraphs_white">
+                            Lorem ipsum dolor sit amet, consectetur adipis
+                            cing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad
+                            minim veniam, quis nostrud exercitation
+                            ullamco laboris nisi ut aliquip ea commodo
+                        </p>
                     </div>
                 </div>
             </div>
